...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

...
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/merchant_store_currency"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <Spinner
                    android:id="@+id/merchantStoreCurrencySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="0dp" />

            </TableRow>
...
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|end"
                    android:hint="@string/_dollar_sign"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <EditText
                    android:id="@+id/productPriceEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
...
                        android:layout_marginEnd="10dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/currency"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <Spinner
                        android:id="@+id/rateSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp" />

                </LinearLayout>

...
            android:enabled="true"
            android:focusable="true"
            android:text="@string/activate_3DS"
            android:textSize="14sp" />

        <ZoomButton
            android:id="@+id/merchantAppSubmitButton"
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_weight="0.11"
            android:adjustViewBounds="true"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ProgressBar
        android:id="@+id/progressBarMerchant"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
...
