...
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|center_vertical"
        android:background="@drawable/logo_poweredby_bluesnap" />

    <TextView
        android:id="@+id/paymentResultTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="your payment of __ has been sent"
...
        android:layout_below="@+id/paymentResultTextView2"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/transactionResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/threeDSResult"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
...
