...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardFieldsLinearLayout"
        android:gravity="bottom|center">

        <TableLayout
            android:id="@+id/subtotal_tax_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TableRow>
...
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:paddingRight="20sp"
                    android:text="@string/subtotal_label" />

                <TextView
                    android:id="@+id/subtotalValueTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </TableRow>

            <TableRow>
...
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:paddingRight="20sp"
                    android:text="@string/tax_label" />

                <TextView
                    android:id="@+id/taxValueTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <Button
            android:id="@+id/buyNowButton"
            android:layout_width="match_parent"
            android:layout_height="60sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/btn_pay"
...
