...
    android:background="#ffffffff"
    android:gravity="center_horizontal"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@color/colorBluesnapBlue"
        android:orientation="vertical">

        <RelativeLayout
...
                android:text="@string/merchant"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ffffff" />

            <ImageButton
                android:id="@+id/hamburger_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
...
